<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorTextIcons">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_your_details_here"
        android:textColor="@color/colorPrimaryText"
        android:textSize="13sp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/retypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/re_type_password"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/your_name"
            android:nextFocusDown="@+id/passwordEditText"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:hint="Country"
            android:padding="10dip"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />
        
        <Spinner
            android:id="@+id/userTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:hint="@string/user_type"
            android:padding="10dip"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/phone_number_with_country_code"
            android:nextFocusDown="@+id/passwordEditText"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/projectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/project"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="15sp" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcons"
            android:layout_gravity="center"
            android:background="@drawable/button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="13sp"
            android:text="@string/already_have_an_account_log_in_here"
            android:id="@+id/loginTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>